--- a/frontend/index.html
+++ b/frontend/index.html
@@ -4,8 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="description" content="" >
     <link rel="icon" type="image/svg+xml" href="/src/assets/logosmall.png" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover" />
-
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <script src="https://cdn.jsdelivr.net/gh/c-kick/mobileConsole/hnl.mobileconsole.min.jss"></script>
     
     <title>Que AI</title>
